# string-literal-const-replace

./: Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml
src/: lib.rs
tests/: tests.rs
